# haskell-for-beginners

./: LICENSE  README.md  haskell-for-beginners.cabal
src/: ConfigFileString.hs  ConfigFileText.hs  JsonPretty.hs  Tail.hs  ViewAscii.hs
test/: iso.txt  mixed.txt  sample.cfg  sample.json  utf8.txt
