name:                haskell-for-beginners
version:             0.1.0.0
synopsis:            Simple but real-worl programs for Haskell newbies
license:             BSD3
license-file:        LICENSE
author:              Stefan Wehr
maintainer:          wehr@cp-med.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable tail
  main-is:             Tail.hs
  build-depends:       base >=4.6 && <5, containers, bytestring, safe
  hs-source-dirs:      src
  default-language:    Haskell2010

executable view-ascii
  main-is:             ViewAscii.hs
  build-depends:       base >=4.6 && <5, bytestring, text
  hs-source-dirs:      src
  default-language:    Haskell2010

executable jsonpp
  main-is:             JsonPretty.hs
  build-depends:       base > 4.6 && < 5, text, aeson < 0.8, pretty,
                       bytestring, vector, unordered-containers, HTF
  hs-source-dirs:      src
  default-language:    Haskell2010

executable config-string
  main-is:             ConfigFileString.hs
  build-depends:       base > 4.6 && < 5
  hs-source-dirs:      src
  default-language:    Haskell2010

executable config-text
  main-is:             ConfigFileText.hs
  build-depends:       base > 4.6 && < 5, text
  hs-source-dirs:      src
  default-language:    Haskell2010
